; ModuleID = '/home/carl/AnghaBench/linux/drivers/video/backlight/extr_tdo24m.c_tdo35s_adj_mode.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/video/backlight/extr_tdo24m.c_tdo35s_adj_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tdo24m = type { i32 }

@lcd_vga_pass_through_tdo35s = common dso_local global i32 0, align 4
@lcd_panel_config = common dso_local global i32 0, align 4
@lcd_vga_transfer_tdo35s = common dso_local global i32 0, align 4
@lcd_qvga_pass_through_tdo35s = common dso_local global i32 0, align 4
@lcd_qvga_transfer = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tdo24m*, i32)* @tdo35s_adj_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tdo35s_adj_mode(%struct.tdo24m* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.tdo24m*, align 8
  %5 = alloca i32, align 4
  store %struct.tdo24m* %0, %struct.tdo24m** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %27 [
    i32 128, label %7
    i32 129, label %17
  ]

7:                                                ; preds = %2
  %8 = load %struct.tdo24m*, %struct.tdo24m** %4, align 8
  %9 = load i32, i32* @lcd_vga_pass_through_tdo35s, align 4
  %10 = call i32 @tdo24m_writes(%struct.tdo24m* %8, i32 %9)
  %11 = load %struct.tdo24m*, %struct.tdo24m** %4, align 8
  %12 = load i32, i32* @lcd_panel_config, align 4
  %13 = call i32 @tdo24m_writes(%struct.tdo24m* %11, i32 %12)
  %14 = load %struct.tdo24m*, %struct.tdo24m** %4, align 8
  %15 = load i32, i32* @lcd_vga_transfer_tdo35s, align 4
  %16 = call i32 @tdo24m_writes(%struct.tdo24m* %14, i32 %15)
  br label %30

17:                                               ; preds = %2
  %18 = load %struct.tdo24m*, %struct.tdo24m** %4, align 8
  %19 = load i32, i32* @lcd_qvga_pass_through_tdo35s, align 4
  %20 = call i32 @tdo24m_writes(%struct.tdo24m* %18, i32 %19)
  %21 = load %struct.tdo24m*, %struct.tdo24m** %4, align 8
  %22 = load i32, i32* @lcd_panel_config, align 4
  %23 = call i32 @tdo24m_writes(%struct.tdo24m* %21, i32 %22)
  %24 = load %struct.tdo24m*, %struct.tdo24m** %4, align 8
  %25 = load i32, i32* @lcd_qvga_transfer, align 4
  %26 = call i32 @tdo24m_writes(%struct.tdo24m* %24, i32 %25)
  br label %30

27:                                               ; preds = %2
  %28 = load i32, i32* @EINVAL, align 4
  %29 = sub nsw i32 0, %28
  store i32 %29, i32* %3, align 4
  br label %34

30:                                               ; preds = %17, %7
  %31 = load i32, i32* %5, align 4
  %32 = load %struct.tdo24m*, %struct.tdo24m** %4, align 8
  %33 = getelementptr inbounds %struct.tdo24m, %struct.tdo24m* %32, i32 0, i32 0
  store i32 %31, i32* %33, align 4
  store i32 0, i32* %3, align 4
  br label %34

34:                                               ; preds = %30, %27
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local i32 @tdo24m_writes(%struct.tdo24m*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
